--- a/package.json
+++ b/package.json
@@ -60,6 +60,10 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "msw": "^2.0.12",
     "prettier": "^3.1.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
