--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@trussworks/react-uswds": "^6.1.0",
+    "dexie": "^3.2.5",
+    "dexie-react-hooks": "^1.1.7",
     "i": "^0.3.7",
     "npm": "^10.2.4",
     "react": "^18.2.0",
