--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "test": "jest",
+    "test": "vitest",
     "eject": "react-scripts eject",
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
@@ -64,7 +64,8 @@
     "jest": "^27.5.1",
     "msw": "^2.0.12",
     "prettier": "^3.1.0",
-    "vite": "^5.0.12"
+    "vite": "^5.0.12",
+    "vitest": "^1.3.1"
   },
   "msw": {
     "workerDirectory": "public"
