--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "demo-repository",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "type": "module",
   "dependencies": {
@@ -33,12 +33,13 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "test": "vitest",
     "eject": "react-scripts eject",
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
     "format": "prettier --write src --config ./.prettierrc",
-    "serve": "serve -s build"
+    "serve": "serve -s dist"
   },
   "eslintConfig": {
     "extends": [
@@ -67,6 +68,7 @@
     "msw": "^2.0.12",
     "prettier": "^3.1.0",
     "vite": "^5.0.12",
+    "vite-plugin-pwa": "^0.19.0",
     "vitest": "^1.3.1"
   },
   "msw": {
