--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "demo-repository",
-  "version": "0.1.0",
+  "name": "radfish-boilerplate",
+  "version": "0.3.1",
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
