--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
-    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^7.0.0",
     "workbox-broadcast-update": "^7.0.0",
@@ -32,14 +31,14 @@
     "workbox-streams": "^7.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "vite",
+    "build": "vite build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
     "format": "prettier --write src --config ./.prettierrc",
-    "serve": "serve -s build"
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -60,13 +59,15 @@
     ]
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.55.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^27.5.1",
     "msw": "^2.0.12",
-    "prettier": "^3.1.0"
+    "prettier": "^3.1.0",
+    "vite": "^5.1.5"
   },
   "msw": {
     "workerDirectory": "public"
