--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
+    "prebuild": "rm -rf dist",
     "test": "jest",
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
@@ -71,7 +72,8 @@
     "msw": "^2.0.12",
     "prettier": "^3.1.0",
     "react-test-renderer": "^18.2.0",
-    "vite": "^5.1.5"
+    "vite": "^5.1.5",
+    "vite-plugin-pwa": "0.19.2"
   },
   "msw": {
     "workerDirectory": "public"
