Update example envs

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-# IndexedDB
-VITE_INDEXED_DB_VERSION=1
-VITE_INDEXED_DB_NAME=example_db_name
+NODE_ENV=
 VITE_PUBLIC_URL=
+
+# IndexedDB
+VITE_INDEXED_DB_VERSION=
+VITE_INDEXED_DB_NAME=
+
+# localStorage
+VITE_LOCAL_STORAGE_KEY=
