Update env variables, set example defaults

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,13 @@
-NODE_ENV=
-VITE_PUBLIC_URL=
+# Example .env file for development, feel free to change the values to your own.
+
+NODE_ENV=development
+VITE_PUBLIC_URL="http://localhost:3000"
 
 # IndexedDB
-VITE_INDEXED_DB_VERSION=
-VITE_INDEXED_DB_NAME=
+VITE_INDEXED_DB_VERSION=1
+VITE_INDEXED_DB_NAME=radfish_dev
+VITE_INDEXED_DB_TABLE_NAME=formData
+VITE_INDEXED_DB_SCHEMA="uuid, fullName, email, phoneNumber, numberOfFish, address1, address2, city, state, zipcode, occupation, department, species, computedPrice"
 
 # localStorage
-VITE_LOCAL_STORAGE_KEY=
+VITE_LOCAL_STORAGE_KEY=formData
