--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,4 @@
 # IndexedDB
-REACT_APP_INDEXED_DB_VERSION=1
-REACT_APP_INDEXED_DB_NAME=example_db_name
+VITE_INDEXED_DB_VERSION=1
+VITE_INDEXED_DB_NAME=example_db_name
+VITE_PUBLIC_URL=
