Add comment to public url env

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 # Example .env file for development, feel free to change the values to your own.
 
 NODE_ENV=development
-VITE_PUBLIC_URL="http://localhost:3000"
+
+# VITE_PUBLIC_URL should always be blank
+VITE_PUBLIC_URL=
 
 # IndexedDB
 VITE_INDEXED_DB_VERSION=1
