--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@tanstack/react-table": "^8.11.7",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@trussworks/react-uswds": "^6.1.0",
     "dexie": "^3.2.5",
@@ -34,7 +32,7 @@
     "start": "vite",
     "build": "vite build",
     "prebuild": "rm -rf dist",
-    "test": "jest",
+    "test": "vitest --mode development",
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
     "format": "prettier --write src --config ./.prettierrc",
@@ -61,6 +59,8 @@
   "devDependencies": {
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
     "@types/jest": "29.5.12",
     "@vitejs/plugin-react": "^4.2.1",
     "babel-jest": "^29.7.0",
@@ -68,12 +68,12 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^27.5.1",
     "msw": "^2.0.12",
     "prettier": "^3.1.0",
     "react-test-renderer": "^18.2.0",
     "vite": "^5.1.5",
-    "vite-plugin-pwa": "0.19.2"
+    "vite-plugin-pwa": "0.19.2",
+    "vitest": "1.4.0"
   },
   "msw": {
     "workerDirectory": "public"
