--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -20,5 +20,8 @@ jobs:
       - name: Install build dependencies
         run: npm install
 
+      - name: Install test dependencies
+        run: npm install --no-save @rollup/rollup-linux-x64-gnu
+
       - name: Run tests
         run: npm test
