update run test

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Use Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: "18"
 
@@ -52,11 +52,8 @@ jobs:
 
       - name: Ensure Server is Ready
         run: |
-          timeout 60 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:3000)" != "200" ]]; do sleep 1; done' || echo "Server not ready in time"
-
-      - name: Verify Server is Running
-        run: curl http://localhost:3000
-        continue-on-error: true
+          echo "Checking if server is ready at http://localhost:3000"
+          curl -v http://localhost:3000 || echo "Server not responding as expected"
 
       - name: Run Lighthouse
         uses: treosh/lighthouse-ci-action@v8
@@ -65,9 +62,10 @@ jobs:
           temporaryPublicStorage: true
           runs: 1
           configPath: "./lighthouse/lighthouserc.json"
+          chromeFlags: "--no-sandbox --headless --disable-gpu --disable-dev-shm-usage"
 
-      - name: Archive Production Artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: lighthouse-reports
-          path: ./lighthouse/reports/
+      - name: Debug Output if Failed
+        if: failure()
+        run: |
+          echo "Lighthouse failed to run, checking environment and outputting logs..."
+          cat /tmp/lighthouse.*/*.log || echo "No logs found"
