--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
     "format": "prettier --write src --config ./.prettierrc",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lhci:mobile": "lhci autorun",
+    "lhci:desktop": "lhci autorun --collect.settings.preset=desktop"
   },
   "eslintConfig": {
     "extends": [
