--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "24.0.0",
     "msw": "^2.0.12",
+    "pptr-testing-library": "^0.8.0",
     "prettier": "^3.1.0",
+    "puppeteer": "^22.6.5",
     "react-test-renderer": "^18.2.0",
     "vite": "^5.1.5",
     "vite-plugin-pwa": "0.19.2",
