--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "start": "vite",
     "build": "vite build",
     "prebuild": "rm -rf dist",
-    "test": "vitest --mode development",
+    "test": "vitest --mode development --exclude './src/__tests__/e2e/**'",
+    "test:e2e": "concurrently \"npm start\" \"vitest --mode development './src/__tests__/e2e/integration.e2e.test.jsx'\"",
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
     "format": "prettier --write src --config ./.prettierrc",
@@ -62,6 +63,7 @@
     "@types/jest": "29.5.12",
     "@vitejs/plugin-react": "^4.2.1",
     "babel-jest": "^29.7.0",
+    "concurrently": "^8.2.2",
     "eslint": "^8.55.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
