--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "vite build",
     "prebuild": "rm -rf dist",
     "test": "vitest --mode development --exclude './src/__tests__/e2e/**'",
-    "test:e2e": "concurrently \"npm start\" \"vitest './src/__tests__/e2e/integration.e2e.test.jsx'\"",
+    "test:e2e": "concurrently --kill-others --success first \"npm start\" \"vitest './src/__tests__/e2e/integration.e2e.test.jsx'\"",
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
     "format": "prettier --write src --config ./.prettierrc",
