--- a/packages/radfish-react/package.json
+++ b/packages/radfish-react/package.json
@@ -8,5 +8,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@tanstack/react-table": "^8.16.0",
+    "@trussworks/react-uswds": "^9.0.0"
+  }
 }
