Add workspace deps to lighthouse action

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -46,7 +46,10 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
 
-      - name: Install dependencies
+      - name: Install workspace dependencies
+        run: npm install
+
+      - name: Install example dependencies
         run: npm install
         working-directory: examples/main
 
