--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run tests
         run: npm test
 
-      # - name: Run e2e tetss
+      # - name: Run e2e tests
       #   run: npm run test:e2e
 
   # lighthouse:
