--- a/packages/react-radfish/package.json
+++ b/packages/react-radfish/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "radfish-react",
-  "version": "1.0.0",
+  "name": "@nmfs-radfish/react-radfish",
+  "version": "0.1.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
