Add react-radfish package dependency to all examples

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "description": "![test and build workflow](https://github.com/NMFS-RADFish/boilerplate/actions/workflows/run-tests.yml/badge.svg)",
   "workspaces": [
-    "./packages/radfish-react"
+    "./packages/react-radfish"
   ],
   "keywords": [],
   "author": "",
