Add README.md, and rename example

--- a/examples/computed-form-fields/package.json
+++ b/examples/computed-form-fields/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "main-example",
+  "name": "computed-form-fields-example",
   "version": "0.9.0",
   "private": true,
   "dependencies": {
