--- a/examples/server-sync/.eslintrc.json
+++ b/examples/server-sync/.eslintrc.json
@@ -17,7 +17,7 @@
   },
   "plugins": ["react"],
   "rules": {
-    "no-unused-vars": "warn",
+    "no-unused-vars": "error",
     "no-console": "off",
     "no-debugger": "off",
     "no-extra-semi": "off",
