--- a/templates/react-javascript/package.json
+++ b/templates/react-javascript/package.json
@@ -3,6 +3,7 @@
   "version": "0.9.0",
   "private": true,
   "dependencies": {
+    "@nmfs-radfish/radfish": "^0.1.0",
     "@nmfs-radfish/react-radfish": "^0.1.0",
     "@tanstack/react-table": "^8.11.7",
     "@testing-library/user-event": "^13.5.0",
