--- a/templates/react-javascript/package.json
+++ b/templates/react-javascript/package.json
@@ -2,7 +2,7 @@
   "version": "0.9.0",
   "dependencies": {
     "@nmfs-radfish/radfish": "^0.1.1",
-    "@nmfs-radfish/react-radfish": "^0.1.0",
+    "@nmfs-radfish/react-radfish": "0.1.0",
     "@tanstack/react-table": "^8.11.7",
     "@testing-library/user-event": "^13.5.0",
     "@trussworks/react-uswds": "^9.0.0",
@@ -59,6 +59,7 @@
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
     "@lhci/cli": "^0.13.0",
+    "@rollup/rollup-darwin-x64": "4.18.0",
     "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "^14.2.2",
     "@vitejs/plugin-react": "^4.2.1",
