--- a/examples/network-status/package.json
+++ b/examples/network-status/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "main-example",
+  "name": "network-status-example",
   "version": "0.9.0",
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@nmfs-radfish/radfish": "^0.1.1",
     "@nmfs-radfish/react-radfish": "0.1.0",
     "@tanstack/react-table": "^8.11.7",
     "@testing-library/user-event": "^13.5.0",
@@ -36,6 +37,7 @@
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
     "format": "prettier --write src --config ./.prettierrc",
+    "preserve": "npm run build",
     "serve": "vite preview",
     "lhci:mobile": "lhci autorun",
     "lhci:desktop": "lhci autorun --collect.settings.preset=desktop"
