--- a/examples/conditional-form-fields/package.json
+++ b/examples/conditional-form-fields/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "main-example",
-  "version": "0.9.0",
+  "name": "conditional-form-fields-example",
+  "version": "0.11.0",
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
