--- a/packages/react-radfish/package.json
+++ b/packages/react-radfish/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,7 @@
     "@trussworks/react-uswds": "^9.0.0"
   },
   "devDependencies": {
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0"
+    "jsdom": "24.1.0",
+    "vitest": "1.6.0"
   }
 }
