--- a/packages/radfish/package.json
+++ b/packages/radfish/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "msw": "^2.3.1"
+    "dexie": "^4.0.7",
+    "msw": "^2.3.1",
+    "react": "^18.3.1"
   }
 }
