--- a/packages/react-radfish/package.json
+++ b/packages/react-radfish/package.json
@@ -15,6 +15,8 @@
     "@trussworks/react-uswds": "^9.0.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "10.2.0",
+    "@testing-library/react": "16.0.0",
     "jsdom": "24.1.0",
     "vitest": "1.6.0"
   }
