--- a/examples/computed-form-fields/package.json
+++ b/examples/computed-form-fields/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@nmfs-radfish/react-radfish": "^0",
     "@tanstack/react-table": "^8.11.7",
     "@testing-library/user-event": "^13.5.0",
     "@trussworks/react-uswds": "^6.1.0",
