--- a/packages/radfish/package.json
+++ b/packages/radfish/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@nmfs-radfish/radfish",
-  "version": "0.2.0",
+  "version": "0.2.2",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "dexie": "^4.0.7",
+    "dexie": "3.2.7",
     "msw": "^2.3.1",
     "react": "^18.3.1"
   }
