--- a/packages/react-radfish/package.json
+++ b/packages/react-radfish/package.json
@@ -1,10 +1,20 @@
 {
   "name": "@nmfs-radfish/react-radfish",
-  "version": "0.4.9",
+  "version": "0.4.11",
   "type": "module",
-  "main": "index.js",
+  "main": "./dist/index.umd.js",
+  "module": "./dist/index.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js"
+    }
+  },
   "scripts": {
-    "test": "vitest"
+    "test": "vitest",
+    "prebuild": "rm -rf dist",
+    "build": "vite build",
+    "prepublish": "npm run build"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +30,7 @@
   "devDependencies": {
     "@testing-library/dom": "10.2.0",
     "@testing-library/react": "16.0.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "jsdom": "24.1.0",
     "vitest": "1.6.0"
   }
