--- a/examples/react-query/package.json
+++ b/examples/react-query/package.json
@@ -5,10 +5,11 @@
   "dependencies": {
     "@nmfs-radfish/radfish": "^0.2.2",
     "@nmfs-radfish/react-radfish": "^0.4.11",
+    "@tanstack/react-query": "^5.51.11",
+    "@tanstack/react-query-devtools": "^5.51.11",
     "@trussworks/react-uswds": "^6.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-query": "^3.39.3"
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "start": "vite",
