--- a/examples/react-query/public/manifest.json
+++ b/examples/react-query/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "On-Device Storage Example",
-  "name": "On-Device Storage Example",
+  "short_name": "React Query Example",
+  "name": "React Query Example",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "radfish.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
