--- a/packages/react-radfish/package.json
+++ b/packages/react-radfish/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@testing-library/dom": "10.2.0",
+    "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "16.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "jsdom": "24.1.0",
