--- a/packages/react-radfish/package.json
+++ b/packages/react-radfish/package.json
@@ -8,7 +8,8 @@
     ".": {
       "import": "./dist/index.es.js",
       "require": "./dist/index.umd.js"
-    }
+    },
+    "./style.css": "./dist/style.css"
   },
   "scripts": {
     "test": "vitest",
