--- a/package.json
+++ b/package.json
@@ -4,6 +4,58 @@
     "./packages/radfish",
     "./packages/react-radfish"
   ],
+  "scripts": {
+    "check-dependency": "node compare-packages.js"
+  },
+  "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@nmfs-radfish/radfish": "0.x",
+    "@nmfs-radfish/react-radfish": "0.x",
+    "@tanstack/react-table": "^8.11.7",
+    "@testing-library/user-event": "^13.5.0",
+    "@trussworks/react-uswds": "^6.1.0",
+    "dexie": "^3.2.5",
+    "dexie-react-hooks": "^1.1.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.2",
+    "web-vitals": "^2.1.4",
+    "workbox-background-sync": "^7.0.0",
+    "workbox-broadcast-update": "^7.0.0",
+    "workbox-cacheable-response": "^7.0.0",
+    "workbox-core": "^7.0.0",
+    "workbox-expiration": "^7.0.0",
+    "workbox-google-analytics": "^7.0.0",
+    "workbox-navigation-preload": "^7.0.0",
+    "workbox-precaching": "^7.0.0",
+    "workbox-range-requests": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0",
+    "workbox-streams": "^7.0.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
+    "@lhci/cli": "^0.14.0",
+    "@testing-library/jest-dom": "6.4.2",
+    "@testing-library/react": "^14.2.2",
+    "@vitejs/plugin-react": "^4.2.1",
+    "babel-jest": "^29.7.0",
+    "concurrently": "^8.2.2",
+    "eslint": "^8.55.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jsdom": "24.0.0",
+    "msw": "^2.0.12",
+    "pptr-testing-library": "^0.8.0",
+    "prettier": "^3.1.0",
+    "puppeteer": "^22.6.5",
+    "react-test-renderer": "^18.2.0",
+    "vite": "^5.1.5",
+    "vite-plugin-pwa": "0.19.2",
+    "vitest": "1.4.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
