--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
 name: "Bug Report 🐛"
 description: "Report a bug to help RADFish improve."
-title: "RADFish Boilerplate - Bug: [YOUR BUG TITLE HERE]"
+title: "RADFish Boilerplate - Bug: [Enter a title]"
 labels: ['bug']
 body:
   - type: textarea
@@ -62,13 +62,13 @@ body:
       description: "Provide any other relevant context or information about the issue."
     validations:
       required: false
-  # - type: checkboxes
-  #   id: confirmation
-  #   attributes:
-  #     label: "Code of Conduct Agreement"
-  #     description: "Please confirm the following:"
-  #     options:
-  #       - label: "I agree to follow this project's [Code of Conduct](https://example.com/code-of-conduct)."
-  #         required: true
-  #       - label: "I have searched for duplicate issues in the [issue tracker](https://github.com/NMFS-RADFish/boilerplate/issues)."
-  #         required: true
+  - type: checkboxes
+    id: confirmation
+    attributes:
+      label: "Code of Conduct Agreement"
+      description: "Please confirm the following:"
+      options:
+        - label: "I have searched for duplicate issues in the [issue tracker](https://github.com/NMFS-RADFish/boilerplate/issues)."
+          required: true
+        # - label: "I agree to follow this project's [Code of Conduct](https://example.com/code-of-conduct)."
+        #   required: true
