--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -7,7 +7,7 @@ body:
     id: issue-description
     attributes:
       label: "Bug Description"
-      description: "Provide a clear and detailed description of the bug you're experiencing. Include whether it affects major or minor functionality and if there's a workaround."
+      description: "A clear and concise description of what the bug is."
     validations:
       required: true
   - type: textarea
@@ -25,17 +25,10 @@ body:
   - type: textarea
     id: expected-behavior
     attributes:
-      label: "Expected Outcome"
-      description: "Describe what you expected to happen."
+      label: "Expected Behavior"
+      description: "What did you expect to happen?"
     validations:
       required: true
-  - type: textarea
-    id: related-code
-    attributes:
-      label: "Relevant Code"
-      description: "Include any code snippets or links to the relevant code that may help resolve the bug (if available)."
-    validations:
-      required: false
   - type: textarea
     id: screenshots
     attributes:
@@ -62,13 +55,13 @@ body:
       description: "Provide any other relevant context or information about the issue."
     validations:
       required: false
-  - type: checkboxes
-    id: confirmation
-    attributes:
-      label: "Code of Conduct Agreement"
-      description: "Please confirm the following:"
-      options:
-        - label: "I have searched for duplicate issues in the [issue tracker](https://github.com/NMFS-RADFish/boilerplate/issues)."
-          required: true
+  # - type: checkboxes
+  #   id: confirmation
+  #   attributes:
+  #     label: "Code of Conduct Agreement"
+  #     description: "Please confirm the following:"
+  #     options:
+  #       - label: "I have searched for duplicate issues in the [issue tracker](https://github.com/NMFS-RADFish/boilerplate/issues)."
+  #         required: true
         # - label: "I agree to follow this project's [Code of Conduct](https://example.com/code-of-conduct)."
         #   required: true
