--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -6,46 +6,39 @@ body:
   - type: textarea
     id: summary
     attributes:
-      label: "Feature Summary"
-      description: "Provide a brief overview of the feature you're suggesting."
+      label: "Feature Description"
+      description: "A clear and concise description of the feature you are requesting."
     validations:
       required: true
   - type: textarea
     id: problem-statement
     attributes:
-      label: "What problem does this feature solve?"
-      description: "Explain the problem you're facing that this feature will address."
+      label: "Why is this feature important?"
+      description: "Explain why this feature would improve the project or solve a specific problem."
     validations:
       required: true
   - type: textarea
     id: proposed-solution
     attributes:
-      label: "Proposed Solution"
-      description: "Describe the feature or change you'd like to see."
+      label: "How should this feature work?"
+      description: "Describe how you imagine the feature working or how it could be implemented."
     validations:
       required: true
-  - type: textarea
-    id: alternative-solutions
-    attributes:
-      label: "Considered Alternatives"
-      description: "Mention any alternative solutions or features you've thought about."
-    validations:
-      required: false
   - type: textarea
     id: extra-context
     attributes:
       label: "Additional Context"
-      description: "Add any extra context or information related to the feature request."
+      description: "Add any other context, screenshots, or references to help explain your request."
     validations:
       required: false
-  - type: checkboxes
-    id: agreement
-    attributes:
-      label: "Code of Conduct Confirmation"
-      description: "Please confirm the following:"
-      options:
-        - label: "I have searched for duplicate issues in the [issue tracker](https://github.com/NMFS-RADFish/boilerplate/issues)."
-          required: true
+  # - type: checkboxes
+  #   id: agreement
+  #   attributes:
+  #     label: "Code of Conduct Confirmation"
+  #     description: "Please confirm the following:"
+  #     options:
+  #       - label: "I have searched for duplicate issues in the [issue tracker](https://github.com/NMFS-RADFish/boilerplate/issues)."
+  #         required: true
         # - label: "I agree to follow this project's [Code of Conduct](https://example.com/code-of-conduct)."
         #   required: true
 
