--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,58 +1,21 @@
 version: 2
 updates:
   - package-ecosystem: "npm"
-    directory: "/packages/radfish"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "npm"
-    directory: "/packages/react-radfish"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "npm"
-    directory: "/examples/computed-form-fields"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "npm"
-    directory: "/examples/conditional-form-fields"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "npm"
-    directory: "/examples/field-validators"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "npm"
-    directory: "/examples/main"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "npm"
-    directory: "/examples/mock-api"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "npm"
-    directory: "/examples/multi-step-form"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "npm"
-    directory: "/examples/network-status"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "npm"
-    directory: "/examples/on-device-storage"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "npm"
-    directory: "/examples/persisted-form"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "npm"
-    directory: "/examples/react-query"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "npm"
-    directory: "/examples/server-sync"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "npm"
-    directory: "/examples/simple-table"
+    directories:
+      - "/packages/radfish"
+      - "/packages/react-radfish"
+      - "/templates/react-javascript"
+      - "/examples/computed-form-fields"
+      - "/examples/conditional-form-fields"
+      - "/examples/field-validators"
+      - "/examples/main"
+      - "/examples/mock-api"
+      - "/examples/multi-step-form"
+      - "/examples/network-status"
+      - "/examples/on-device-storage"
+      - "/examples/persisted-form"
+      - "/examples/react-query"
+      - "/examples/server-sync"
+      - "/examples/simple-table"
     schedule:
       interval: "weekly"
