--- a/packages/radfish/package.json
+++ b/packages/radfish/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "dexie": "^4.0.7",
+    "dexie": "4.0.x",
     "msw": "^2.3.1",
     "react": "^18.3.1"
   }
