--- a/examples/react-query/package.json
+++ b/examples/react-query/package.json
@@ -9,7 +9,8 @@
     "@tanstack/react-query-devtools": "^5.51.11",
     "@trussworks/react-uswds": "^6.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.2"
   },
   "scripts": {
     "start": "vite",
