--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -20,3 +20,16 @@ jobs:
       - name: Install workspace dependencies
         run: npm install
         working-directory: .
+
+  lighthouse:
+    name: Lighthouse CI
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+
+      - name: Install workspace dependencies
+        run: npm install
+        working-directory: .
