--- a/examples/computed-form-fields/package.json
+++ b/examples/computed-form-fields/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@nmfs-radfish/radfish": "0.x",
     "@nmfs-radfish/react-radfish": "0.x",
+    "@testing-library/user-event": "^14.5.2",
     "@trussworks/react-uswds": "^9.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
