Update Dependabot schedule to run on Thursdays instead of Mondays

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,6 +18,7 @@ updates:
       - "/examples/simple-table"
     schedule:
       interval: "weekly"
+      day: "thursday"
     ignore:
       - dependency-name: "*"
         update-types: ["version-update:semver-major" , "version-update:semver-patch"]
