--- a/templates/react-javascript/package.json
+++ b/templates/react-javascript/package.json
@@ -25,7 +25,7 @@
     "start": "vite",
     "build": "vite build",
     "prebuild": "rm -rf dist",
-    "test": "vitest --exclude './src/__tests__/e2e/**'",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "test:e2e": "concurrently --kill-others --success first \"npm start\" \"vitest './src/__tests__/e2e/integration.e2e.test.jsx'\"",
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
