--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -38,6 +38,10 @@ jobs:
         run: npm install
         working-directory: templates/react-javascript
 
+      - name: Build project
+        run: npm run build
+        working-directory: templates/react-javascript
+
       - name: lighthouse mobile audit
         run: npm run lhci:mobile && npx lhci upload --target=temporary-public-storage
         working-directory: templates/react-javascript
