--- a/examples/server-sync/package.json
+++ b/examples/server-sync/package.json
@@ -3,8 +3,8 @@
   "version": "0.11.0",
   "private": true,
   "dependencies": {
-    "@nmfs-radfish/radfish": "0.x",
-    "@nmfs-radfish/react-radfish": "0.x",
+    "@nmfs-radfish/radfish": "^1.0.0-rc.1",
+    "@nmfs-radfish/react-radfish": "^1.0.0-rc.2",
     "@testing-library/user-event": "^14.5.2",
     "@trussworks/react-uswds": "^9.1.0",
     "react": "^18.2.0",
@@ -49,8 +49,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/eslint-parser": "^7.24.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
     "@lhci/cli": "^0.14.0",
