--- a/packages/radfish/package.json
+++ b/packages/radfish/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nmfs-radfish/radfish",
-  "version": "1.1.0-rc.2",
+  "version": "1.1.0",
   "main": "index.js",
   "scripts": {
     "test": "jest"
