fix(ci): link vite-plugin-radfish-theme in Lighthouse CI tests

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Install template dependencies with local packages
         run: |
           npm install
-          npm link @nmfs-radfish/radfish @nmfs-radfish/react-radfish
+          npm link @nmfs-radfish/radfish @nmfs-radfish/react-radfish @nmfs-radfish/vite-plugin-radfish-theme
         working-directory: templates/react-javascript
 
       - name: Build project
